--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td><img src="Lera.png" alt="Lera in the game 'meat boy'"></td>
+          <td><img src="Image\Lera.png" alt="Lera in the game 'meat boy'"></td>
         <td><h1> Lera Melnikova </h1>
         <p><em>Specialist of logistics department <strong><a href="https://www.smc.eu/ru-ru">SMC LLC</a></strong>.</em></p>
         <p>I am working in SMC 5 years.</p></td>
@@ -39,25 +39,27 @@
       </tbody>
     </table>
 
-    <h3>Skills</h3>
+  <h3>Skills</h3>
     <table>
-        <tr>
-          <td>Loyalty</td>
-          <td>⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Optimistic</td>
-          <td>⭐⭐</td>
-        </tr>
+      <tr>
+        <td>Loyalty</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Optimistic</td>
+        <td>⭐⭐</td>
+      </tr>
 
-  <tr>
-        <td>Responsibility</td> <td>⭐⭐⭐⭐</td>
-        <td> Patient</td> <td>⭐</td>
-    </tr>
-
-
-</table>
-<hr>
+      <tr>
+        <td>Responsibility</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Patience</td>
+        <td>⭐</td>
+      </tr>
+    </table>
+    <hr>
     <h3>My Hobbies</h3>
     <ol>
       <li><a href="https://www.chloeting.com/program/2020/get-peachy-challenge.html">Home workouts</a></li>
@@ -65,5 +67,6 @@
       <li>Sleep</li>
     </ol>
     <h3><a href="Contact.html">Contact Me</a></h3>
-  </body>
-</html>
+    </body>
+
+    </html>
