--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-          <td><img src="Image\Lera.png" alt="Lera in the game 'meat boy'"></td>
+          <td><img src="Image/Lera.png" alt="meat girl"></td>
         <td><h1> Lera Melnikova </h1>
         <p><em>Specialist of logistics department <strong><a href="https://www.smc.eu/ru-ru">SMC LLC</a></strong>.</em></p>
         <p>I am working in SMC 5 years.</p></td>
